tests/ui/openapi_type/enum_with_fields.stderr
error: #[derive(OpenapiType)] does not support enum variants with fields
 --> $DIR/enum_with_fields.rs:7:2
  |
7 |     Pizza { pineapple: bool },
  |     ^^^^^

error: #[derive(OpenapiType)] does not support enum variants with fields
 --> $DIR/enum_with_fields.rs:9:2
  |
9 |     Other(String)
  |     ^^^^^
